2011-05-24  Sam Steingold  <sds@gnu.org>

	* Makefile.devel (GNULIB_CORE): import mkfifo mknod mkstemp
	mkdtemp getloadavg
	* modules/syscalls/calls.c (MKSTEMP, MKDTEMP, LOADAVG, MKNOD):
	define uniformly on all platforms
	* modules/syscalls/posix.lisp (mknod): export on all platforms

2011-05-20  Sam Steingold  <sds@gnu.org>

	* spvw_language.d (clgettext) [!GNU_GETTEXT]: define for CLSTEXT

2011-05-19  Sam Steingold  <sds@gnu.org>

	* subrkw.d: remove
	* spvw.d (init_subr_tab_2): use subr with LISPFUN_H instead of subrkw
	* subr.d (LISPFUN_H): fix
	* makemake.in (OTHER_INCLUDES): remove subrkw
	* po/Makefile.devel (DSOURCES): ditto
	* check-lispfun.lisp (check-lisp-defs): do not look at subrkw.d

2011-05-19  Sam Steingold  <sds@gnu.org>

	* zthread.d (EXEMPTION-WAIT): fix the key count in the definition
	to match the (correct) declaration in subr.d

2011-05-19  Sam Steingold  <sds@gnu.org>

	* constobj.d, constsym.d, hashtabl.d, io.d, lispbibl.d,
	* pathname.d, predtype.d, spvw.d, spvw_debug.d, subr.d, subrkw.d:
	remove the LOGICAL_PATHNAMES CPP macro;
	logical pathnames are unconditionally present in CLISP

2011-05-19  Sam Steingold  <sds@gnu.org>

	* constobj.d, constsym.d, lispbibl.d, pathname.d, subr.d: remove
	HAVE_SHELL which is always defined on all platforms supported by CLISP

2011-05-19  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c (processor_architecture): add DEFCHECKER
	(SYSTEM-INFO): use it; also push dwProcessorType on STACK
	* modules/syscalls/posix.lisp (system-info): add PROCESSOR-TYPE slot

2011-05-19  Sam Steingold  <sds@gnu.org>

	* constobj.d, constsym.d, lispbibl.d, misc.d, socket.d:
	* spvw_memfile.d, subr.d: remove MACHINE_KNOWN
	which is always defined on all platforms supported by CLISP

2011-05-19  Sam Steingold  <sds@gnu.org>

	* constsym.d, lispbibl.d, misc.d, subr.d: remove HAVE_ENVIRONMENT
	which is always defined on all platforms supported by CLISP

2011-05-18  Vladimir Tzankov  <vtzankov@gmail.com>
